test_regress/t/t_inst_recurse2_bad.out
%Error-UNSUPPORTED: t/t_inst_recurse2_bad.v:18:8: Unsupported: Identically recursive module (module instantiates itself, without changing parameters): 'looped'
                                                : ... In instance t.looped.looped
   18 | module looped ( );
      |        ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
